--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   flutter_map: ^4.0.0
   latlong2: ^0.8.1
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
