--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_map: ^4.0.0
   latlong2: ^0.8.1
   shared_preferences: ^2.3.3
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
